--- a/config/app_config.json
+++ b/config/app_config.json
@@ -1,11 +1,11 @@
 {
-  "thread_count": 5,
+  "thread_count": 2,
   "cookies": [
-    "datr=hxFAaaXmlgTZvHrFWafttpbB;dpr=1.5;sb=hxFAaQ4_EaarsaJDxgYyXggK;ps_l=1;ps_n=1;ar_debug=1;wd=911x932;c_user=100094724526839;presence=C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1766925071289%2C%22v%22%3A1%7D;fr=1XAN8WCGwb7VEO8m4.AWdCzXx1NTa-pe7joIu5UKmqSWkKN2ETSGi8e51QodO-yi-MBKU.BpUSQQ..AAA.0.0.BpUSQQ.AWftuU_Y2DUQcBaD_OWaCScw7Dk;xs=29%3AJgWOPA2lpiSmMA%3A2%3A1766923833%3A-1%3A-1%3A%3AAczJcwOD6nEW1sikT13rwcfFQLLQA1MAVx0erx5L3A;",
+    "datr=3rsgaaZpWuBAsHiFR-kh26OT;sb=hNVDaSnImuyCp8dXtCqdKnKQ;wd=1707x932;dpr=1.5;ps_l=1;ps_n=1;c_user=100080898411500;fr=1tkXl3nsl4QVk5UPu.AWeDCkFjHYUbY2rJYxu1aVtjHJ4Fy5bjoxKDixPpxy1em-gehls.BpUTTu..AAA.0.0.BpUTTu.AWeTptmOr6-416Oki0Sc4IPg50M;xs=38%3AF4SVigTatvRp9w%3A2%3A1766929641%3A-1%3A-1%3A%3AAcxwZxktUgYE5-iXHRRHj4cQpGJmHXlbGqgtAj84vg;presence=C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1766929655908%2C%22v%22%3A1%7D;",
     "datr=hxFAaaXmlgTZvHrFWafttpbB;dpr=1.5;sb=hxFAaQ4_EaarsaJDxgYyXggK;ps_l=1;ps_n=1;ar_debug=1;wd=911x932;c_user=100094724526839;presence=C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1766925071289%2C%22v%22%3A1%7D;fr=1XAN8WCGwb7VEO8m4.AWdCzXx1NTa-pe7joIu5UKmqSWkKN2ETSGi8e51QodO-yi-MBKU.BpUSQQ..AAA.0.0.BpUSQQ.AWftuU_Y2DUQcBaD_OWaCScw7Dk;xs=29%3AJgWOPA2lpiSmMA%3A2%3A1766923833%3A-1%3A-1%3A%3AAczJcwOD6nEW1sikT13rwcfFQLLQA1MAVx0erx5L3A;",
     "datr=hxFAaaXmlgTZvHrFWafttpbB;dpr=1.5;sb=hxFAaQ4_EaarsaJDxgYyXggK;ps_l=1;ps_n=1;ar_debug=1;wd=911x932;c_user=100094724526839;presence=C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1766925071289%2C%22v%22%3A1%7D;fr=1XAN8WCGwb7VEO8m4.AWdCzXx1NTa-pe7joIu5UKmqSWkKN2ETSGi8e51QodO-yi-MBKU.BpUSQQ..AAA.0.0.BpUSQQ.AWftuU_Y2DUQcBaD_OWaCScw7Dk;xs=29%3AJgWOPA2lpiSmMA%3A2%3A1766923833%3A-1%3A-1%3A%3AAczJcwOD6nEW1sikT13rwcfFQLLQA1MAVx0erx5L3A;",
     "datr=hxFAaaXmlgTZvHrFWafttpbB;dpr=1.5;sb=hxFAaQ4_EaarsaJDxgYyXggK;ps_l=1;ps_n=1;ar_debug=1;wd=911x932;c_user=100094724526839;presence=C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1766925071289%2C%22v%22%3A1%7D;fr=1XAN8WCGwb7VEO8m4.AWdCzXx1NTa-pe7joIu5UKmqSWkKN2ETSGi8e51QodO-yi-MBKU.BpUSQQ..AAA.0.0.BpUSQQ.AWftuU_Y2DUQcBaD_OWaCScw7Dk;xs=29%3AJgWOPA2lpiSmMA%3A2%3A1766923833%3A-1%3A-1%3A%3AAczJcwOD6nEW1sikT13rwcfFQLLQA1MAVx0erx5L3A;",
     "datr=hxFAaaXmlgTZvHrFWafttpbB;dpr=1.5;sb=hxFAaQ4_EaarsaJDxgYyXggK;ps_l=1;ps_n=1;ar_debug=1;wd=911x932;c_user=100094724526839;presence=C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1766925071289%2C%22v%22%3A1%7D;fr=1XAN8WCGwb7VEO8m4.AWdCzXx1NTa-pe7joIu5UKmqSWkKN2ETSGi8e51QodO-yi-MBKU.BpUSQQ..AAA.0.0.BpUSQQ.AWftuU_Y2DUQcBaD_OWaCScw7Dk;xs=29%3AJgWOPA2lpiSmMA%3A2%3A1766923833%3A-1%3A-1%3A%3AAczJcwOD6nEW1sikT13rwcfFQLLQA1MAVx0erx5L3A;"
   ],
-  "headless": false
+  "headless": true
 }
